Show node configuration in gui.